@@ -15,6 +15,7 @@
 #include <QtGlobal>
 #if QT_VERSION >= QT_VERSION_CHECK(6, 0, 0)
 #	include <QEventPoint>
+#	include <QImageReader>
 #	include <QInputDevice>
 #else
 #	include <QTouchDevice>
@@ -203,6 +204,11 @@ inline bool isTouchPad(const QTouchEvent *event)
 	return event->deviceType() == QInputDevice::DeviceType::TouchPad;
 }
 
+inline void disableImageReaderAllocationLimit()
+{
+	QImageReader::setAllocationLimit(0);
+}
+
 #else
 using DeviceType = QTabletEvent::TabletDevice;
 using EnterEvent = QEvent;
@@ -305,6 +311,11 @@ inline int touchDeviceType(const QTouchEvent *event)
 inline bool isTouchPad(const QTouchEvent *event)
 {
 	return touchDeviceType(event) == int(QTouchDevice::TouchPad);
+}
+
+inline void disableImageReaderAllocationLimit()
+{
+	// Nothing to do, Qt 5 doesn't have this limit.
 }
 #endif
 }
