@@ -61,6 +61,7 @@ Unreleased Version 2.2.2-pre
  * Feature: Show layouts action in dock menus. Thanks Elisa for suggesting.
  * Fix: Set TCP_NODELAY on sockets to reduce unnecessary latency.
  * Feature: Build option -DPROXY_STYLE=ON to fix the bad contrast in dark themes when not building a patched version of Qt yourself.
+ * Fix: Disable the image memory limit when using Qt 6, because that breaks the loading large files. Thanks LiterallyMe for reporting.
 
 2024-02-25 Version 2.2.2-beta.1
  * Server Feature: Allow adding a message when kicking someone through the admin API.
